// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator should render default ActivityIndicator 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 1.024rem; height: 1.024rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
    </view>
  </view>
  
</view>
`;

exports[`ActivityIndicator should render prop -- color 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 1.024rem; height: 1.024rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #13ce66; border-color: #13ce66 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #13ce66; border-color: #13ce66 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #13ce66; border-color: #13ce66 transparent transparent transparent;"
      />
    </view>
  </view>
  
</view>
`;

exports[`ActivityIndicator should render prop -- content 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 1.024rem; height: 1.024rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
    </view>
  </view>
  <text
    class="at-activity-indicator__content"
  >
    加载中...
  </text>
</view>
`;

exports[`ActivityIndicator should render prop -- isOpened 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 1.024rem; height: 1.024rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
    </view>
  </view>
  
</view>
`;

exports[`ActivityIndicator should render prop -- mode 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 1.024rem; height: 1.024rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
    </view>
  </view>
  
</view>
`;

exports[`ActivityIndicator should render prop -- size 1`] = `
<view
  class="at-activity-indicator at-activity-indicator--isopened"
>
  <view
    class="at-activity-indicator__body"
  >
    <view
      class="at-loading"
      style="width: 0.6827rem; height: 0.6827rem;"
    >
      <view
        class="at-loading__ring"
        style="width: 0.6827rem; height: 0.6827rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 0.6827rem; height: 0.6827rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
      <view
        class="at-loading__ring"
        style="width: 0.6827rem; height: 0.6827rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
      />
    </view>
  </view>
  
</view>
`;
